--- a/index.html
+++ b/index.html
@@ -8,23 +8,66 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>New Age - Start Bootstrap Theme</title>
+  <title>Survey Form</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://basisr.s3.amazonaws.com/training/Task2/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
+  <link href="https://basisr.s3.amazonaws.com/training/Task2/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://basisr.s3.amazonaws.com/training/Task2/vendor/simple-line-icons/css/simple-line-icons.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
   <!-- Plugin CSS -->
-  <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
+  <link rel="stylesheet" href="https://basisr.s3.amazonaws.com/training/Task2/device-mockups/device-mockups.min.css">
 
   <!-- Custom styles for this template -->
-  <link href="css/new-age.css" rel="stylesheet">
+  <link href="https://basisr.s3.amazonaws.com/training/Task2/css/new-age.css" rel="stylesheet">
+  <script>
+
+      var uid;
+
+      // Prevent forms from submitting.
+      function preventFormSubmit() {
+        var forms = document.querySelectorAll('form');
+        for (var i = 0; i < forms.length; i++) {
+          forms[i].addEventListener('submit', function (event) {
+            event.preventDefault();
+          });
+        }
+      }
+      window.addEventListener('load', preventFormSubmit);
+
+      function handleFormSubmit(formObject) {
+        console.log('here');
+        var idvar = document.getElementById("idfromurl");
+
+        //idvar.value = 1234;
+        idvar.value = uid;
+        google.script.run.withSuccessHandler(updateUrl).processForm(formObject);
+      }
+      function updateUrl(url) {
+        console.log('Uploaded');
+      }
+      function getUserID() {
+        if (isAppsScript()) {
+          uid = "<?!= uid ?>";
+        }
+        else {
+          var url = new URL(window.location.href);
+          uid = url.searchParams.get("uid");
+        }
+      }
+    function isAppsScript() {
+      if (google===undefined) {
+        return false;
+      } else {
+        return true;
+      }
+    }
+  </script>
 
 </head>
 
@@ -62,17 +105,17 @@
     <div class="container h-100">
       <div class="row h-100">
         <div class="col-lg-12 my-auto">
-          <form>
+          <form  onsubmit="handleFormSubmit(this)">
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="First Name">
-              <!--<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
+              <label for="InputFirstName">First Name</label>
+              <input class="form-control" id="InputFirstName" name="InputFirstName" placeholder="First Name">
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Last Name">
+              <label for="InputLastName">Last Name</label>
+              <input class="form-control" id="InputLastName" name="InputLastName" placeholder="Last Name">
             </div>
+            <input id="idfromurl" name="idfromurl" type="hidden">
+            <br/>
             <!--
             <div class="form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -240,14 +283,14 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://basisr.s3.amazonaws.com/training/Task2/vendor/jquery/jquery.min.js"></script>
+  <script src="https://basisr.s3.amazonaws.com/training/Task2/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="https://basisr.s3.amazonaws.com/training/Task2/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/new-age.min.js"></script>
+  <script src="https://basisr.s3.amazonaws.com/training/Task2/js/new-age.min.js"></script>
 
 </body>
 
