--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
       return uid;
     }
     function runProcess(formObject) {
-      console.log('calling runProcess returning ' + uid + ' and ' + document.getElementById("InputFirstName").value + ' and ' + document.getElementById("InputLastName").value)
+      console.log(
+        'calling runProcess returning ' + uid + ' and ' + document.getElementById("InputFirstName").value +
+        ' and ' + document.getElementById("InputLastName").value);
       if (isAppsScript()) {
         console.log('calling google scripts')
         google.script.run.withSuccessHandler(updateUrl).processForm(formObject);
